Corrected flex-align and added vertical-align

--- a/Resources/style.css
+++ b/Resources/style.css
@@ -38,7 +38,8 @@ button{
     width: 250px;
     display: inline-flex;
     flex-direction: column;
-    align-items:flex-end;
+    align-items:flex-start;
+    vertical-align: bottom;
     border: none;
     border-radius: 10px;
     color: #333;
